@@ -1,0 +1,31 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
+[platformio]
+
+# There should be only one env section for the DUT under test.
+# One of
+#	atmega328p
+#   atmega2560_timer1
+#   atmega2560_timer3
+#   atmega2560_timer4
+#   atmega2560_timer5
+#
+[common]
+# This is the line input to StepperDemo:
+build_flags = -D SIM_TEST_INPUT='"? M1 A1000 V100 R3200 W t W "'
+
+[env:atmega2560_timer4]
+platform    = atmelavr
+board       = megaatmega2560
+framework   = arduino
+build_flags = -Werror -Wall -DSIMAVR_FOC_WORKAROUND ${common.build_flags}
+lib_extra_dirs = ../../..
+
